--- a/src/4. Tari Kecak Ubud .jade
+++ b/src/4. Tari Kecak Ubud .jade
@@ -1,37 +1,20 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Tari Kecak Ubud
+  include header
 
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
-
       Section
         h1 Tari Kecak Ubud
-        img(src="images/Tari-Kecak-Ubud.jpg")
-
-      section
-        h3 Gambaran Tari Kecak Api Ubud
-        img(src="images/Tari-Kecak-Ubud-1.jpg")
-
-      section
-        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu paham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
-      section        
-        p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil dengan driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil
+        img(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
 
       Section
-        P Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
-
+        P Objek wisata Ubud sangat terkenal akan wisata air atau yang dikenal dengan nama Ayung Rafting Ubuddan wisata kesenian dan salah satunya adalah seni tari Kecak Bali. Banyak wisatawan yang wisata ke Ubud Bali, tidak merasa lengkap apabila tidak menononton pertujukan tari kecak Ubud. Tentunya tidak akan susah buat wisatawan untuk mendapatkan kesempatan menonton tari yang terkadang disebut dengan nama tari kecak api Ubud.
 
       section
-        h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
-        img(src="images/tari-kecak-di-pura-uluwatu.jpg" width = 600)
-
+         h3 Jadwal & Harga Tiket Tari Kecak Ubud
+         p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon dicatat, tidak setiap hari dipentaskan tarian kecak di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon lihat jadwal di bawah, untuk kepastian tempat pementasan, harga tiket dan jam pementasan tarian kecak di Ubud.
       
 
       Section
@@ -47,6 +30,9 @@ html
              td 19:00
              td Trene Jenggala
              td Rp. 75.000,-
+           tr(align='left') 
+             td
+             td
            tr(align='left')
              td Pura Batukaru
              td 19:30
@@ -176,6 +162,9 @@ html
         p Selain jadwal rutin dari tari kecak Ubud diatas, ada jadwal tari kecak lain yang hanya diadakan pada saat bulan purnama. Tempat pementasan pada saat bulan purnama adanya di Museum Arma Ubud, jadwal pentas pada jam 18:45, dengan harga tiket Rp. 100.000.
         p Mohon dicatat, harga tiket dapat berubah sewaktu-waktu.
 
+      section
+        h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
+        img(src="images/tari-kecak-di-pura-uluwatu.jpg" height = 300 width = 600)
 
       Section
         p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
@@ -184,4 +173,5 @@ html
         p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil + driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil.
         p Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
 
-    script(src='build/build.js')
+   include footer
+
