--- a/src/index.jade
+++ b/src/index.jade
@@ -5,90 +5,172 @@ html
   body.classic
     include menu
     article
+      Section
+        h1 Tari Kecak Ubud
+        img(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        P Objek wisata Ubud sangat terkenal akan wisata air atau yang dikenal dengan nama Ayung Rafting Ubuddan wisata kesenian dan salah satunya adalah seni tari Kecak Bali. Banyak wisatawan yang wisata ke Ubud Bali, tidak merasa lengkap apabila tidak menononton pertujukan tari kecak Ubud. Tentunya tidak akan susah buat wisatawan untuk mendapatkan kesempatan menonton tari yang terkadang disebut dengan nama tari kecak api Ubud.
 
       section
-        h2 Legong Mahabharata
-        img.big(src="images/tari-Legong-Mahabharata.jpg" height = 300 width = 600)
+         h3 Jadwal & Harga Tiket Tari Kecak Ubud
+         p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon dicatat, tidak setiap hari dipentaskan tarian kecak di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon lihat jadwal di bawah, untuk kepastian tempat pementasan, harga tiket dan jam pementasan tarian kecak di Ubud.
+      
 
-      section        
-        p Liburan di Bali tidak akan lengkap jika belum menonton tari Bali. Ada tiga jenis tarian yang sangat dikenal di kalangan wisatawan, yaitu tari Barong Batubulan, tari Kecak Uluwatu dan tari Legong Ubud. Dihalaman ini kami menuliskan untuk anda, tari Legong Mahabharata.
-
-      section
-        p Tari Legong, salah satu tarian Bali yang variasi geraknya sangat banyak, unik dan sangat atraktif. Walaupun saya pribadi sering menonton tari Legong dari kecil, sampai saat ini saya masih suka menonton tari Legong. Legong berasal dari kata "Leg", yang memiliki arti lentur dan luwes. Sedangkan Gong, berarti alat musik traditional Bali yang mengiringi tari Legong atau dalam bahasa Indonesia disebut dengan nama Gambelan. Jadi dari arti nama, tari Legong  berarti tari yang sangat lentur dan luwes dan harus mengikuti suara instrumen dari gambelan dan penari tidak diperbolehkan untuk bergerak sesuka hati.
-
-      section
-        p Jenis gambelan yang digunakan untuk mengiringi tari Legong dinamakan, gambelan Semar Pegulingan. Jenis gambelan Semar Pegulingan, menghasilkan suara stereo dan terdengar nyaman di telinga. Jenis gambelan Semar Pegulingan, juga di gunakan pada tari barong di Bali.
-
-      section
-        h2 Sejarah Tari Legong Bali
-        img(src="images/Legong-Mahabharata-Di-Ubud.jpg")
-
-      section
-        p Tari Legong diciptakan dan berkembang pada akhir abad ke 19 dan lebih sering ditarikan di istana kerajaan Bali atau keraton. Di masyarakat Bali, tari Legong lebih familiar dengan nama Legong Keraton, mungkin karena dulunya sering di pentaskan di keraton kerajaan Bali.Menurut cerita dari orang tua di Bali, katanya tari Legong tercipta karena seorang pangeran di kerajaan Sukawati pada saat sakit. Sang pangeran bermimpi melihat dua gadis belia menarikan tarian ini dan diiringi oleh gambelan yang sangat merdu. Setelah pangeran dari kerajaan Sukawati ini sembuh, maka tarian yang terlihat dari mimpi beliau di ciptakan dalam dunia nyata.Awal mulanya, tari Legong hanya terdapat dua orang gadis yang masih belia dan belum mengalami masa menstruasi. Kedua penari Legong akan membawa kipas, dengan kipas ini, kedua penari Legong akan melakukan gerak yang hampir sama di setiap bagian tarian.
-
-      section
-        h2 Tari Legong Mahabharata Di Puri Ubud
-        img(src="images/Legong-Mahabharata-Puri-Saren-Ubud.jpg") 
-
-      section
-        p Jika anda ingin menonton tari Legong Mahabharata, tempat yang harus anda kunjungi adalah puri Ubud atau sering disebut dengan nama puri Saren. Untuk melihat peta lokasi dari puri Saren silakan klik link ini, peta lokasi puri Saren Ubud. Jika anda menginap di Ubud, untuk mencari lokasi dari puri Saren sangatlah mudah, malas jalan kaki anda dapat memanggil taksi. Lalu bagi anda yang tidak menginap di tempat wisata Ubud, tentunya dengan menggunakan taksi biaya transfortasi akan menjadi mahal.
-
-      section
-        p Jika ingin menginap di kawasan wisata Bali selatan seperti tempat wisata Kuta dan objek wisata Seminyak, dan ingin berwisata ke Ubud, cara hemat dan terbaik adalah menggunakan jasa sewa mobil dengan sopir di Kuta. Dengan menggunakan jasa rental mobil dengan sopir di Bali, biaya tidak dihitung dengan menggunakan argo, melainkan menggunakan durasi penggunaan. Tempat wisata di Ubud sangat susah untuk mencari tempat parkir, oleh karena itu disarankan menggunakan sopir, agar tidak perlu memikirkan tempat parkir mobil. Selain menggunakan jasa sewa mobil murah di Bali dengan supir, juga dapat membeli paket tour di Bali, khusus untuk wisata ke Ubud. 
-
-      section
-        h2 Jadwal Tari Legong Mahabharata Di Puri Saren
-        img(src="images/Legong-Mahabharata-seni-tari-ubud.jpg") 
-
-      section  
-        p Tidak setiap hari ada pementasan tari Legong Mahabharata di puri Saren Ubud, pementasan khusus untuk tari Legong Mahabharata, hanya ada pada hari minggu. Tari Legong Mahabharata di puri Saren Ubud dimulai pada jam 19:30 - 21:00, jadi lumayan lama.
-        p Selain tari Legong Mahabharata, di puri Saren Ubud juga dipentaskan tarian lain yang berbeda setiap harinya. Untuk jadwal tari di puri Saren Ubud dapat anda lihat di bawah ini.
-
-      section  
-        h3 Jadwal Tari Di Puri Saren Ubud
-        table(border=5 cellpadding=10 cellspacing=20)
+      Section
+         h3 Hari Minggu
+         table(border=0 cellpadding=5 cellspacing=10)
            tr(align='left')
-             td Hari
-             td Jenis Tari
+             td Lokasi Pentas
              td Jam
+             td Oleh 
+             td Harga Tiket
            tr(align='left') 
-             td Senin
-             td Tari Legong Keraton
-             td 19.30-21.00
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
            tr(align='left') 
-             td Selasa
-             td Ramayana Ballet
-             td 19.30-21.00
-           tr(align='left') 
-             td Rabu
-             td Tari Legong & Barong
-             td 19.30-21.00
-           tr(align='left') 
-             td Kamis
-             td Tari Legong Keraton
-             td 19.30-21.00
-           tr(align='left') 
-             td Jumat
-             td Tari Barong Ubud dan Keris
-             td 19.30-21.00
-           tr(align='left') 
-             td Sabtu
-             td Tari Legong Keraton
-             td 19.30-21.00
-           tr(align='left') 
-             td Minggu
-             td Tari Legong Mahabharata
-             td 19.30-21.00
-         p Untuk tiket tari Legong Mahabharata, harganya per 10 Januari 2015 Rp 80.000 untuk satu orang. Pemesanan tiket dapat dilakukan langsung di lokasi pemesantasan.
+             td
+             td
+           tr(align='left')
+             td Pura Batukaru
+             td 19:30
+             td Desa Adat Sambahan 
+             td Rp. 75.000,-
 
+      Section
+         h3 Hari Senin
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Desa Junjungan
+             td 18:30
+             td Desa Adat Junjungan
+             td Rp. 75.000,-
+           tr(align='left')
+             td Pura Dalem Ubud
+             td 19:30
+             td Adat Ubud Kaja
+             td Rp. 80.000,-
 
-      section  
-        h3 Tips Menonton Tari Bali Di Puri Saren Ubud
-        ul 
-          li Ingin mendapatkan tempat duduk di bagian depan, anda harus datang lebih awal, setidaknya 30 menit lebih awal.
-          li Belilah tiket dari anak-anak yang banyak menjual tiket di depan puri Saren, karena anda dapat menawar harga tiket.
-          li Bawalah lotion anti nyamuk.
-          li Bersiaplah untuk duduk agak lama.
-          li Bawalah brosur tentang tarian ini, agar anda tahu jalan ceritanya saat menonton.
+      Section
+         h3 Hari Selasa
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Jaba Pura Taman Sari
+             td 19:00
+             td Sandhi Suara
+             td Rp. 75.000,-
+
+      Section
+         h3 Hari Rabu
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Taman Kaja
+             td 19:30
+             td Desa Adat Taman Kaja
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Batu Karu
+             td 19:30
+             td Desa Adat Ubud Tengah (Penari Wanita)
+             td Rp. 80.000,-
+
+      Section
+         h3 Hari Kamis
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Puri Agung Peliatan
+             td 18:45
+             td Semara Madya
+             td Rp. 75.000,- / Orang
+           tr(align='left') 
+             td Puri Jaba Pura Taman Sari
+             td 19:30
+             td Sandhi Suara
+             td Rp. 75.000,- / Orang
+           tr(align='left') 
+             td Pura Batu Karu
+             td 19:30
+             td Desa Adat Sambahan
+             td Rp. 75.000,- / Orang
+
+      Section
+         h3 Hari Jumat
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Pura Padang Kertha
+             td 19:00
+             td Padang Subadra
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Ubud
+             td 19:30
+             td Desa Adat Ubud Kaja
+             td Rp. 80.000,-
+
+      Section
+         h3 Hari Sabtu
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Taman Kaja
+             td 19:30
+             td Desa Adat Taman Kaja
+             td Rp. 75.000,-
+
+      Section
+        p Selain jadwal rutin dari tari kecak Ubud diatas, ada jadwal tari kecak lain yang hanya diadakan pada saat bulan purnama. Tempat pementasan pada saat bulan purnama adanya di Museum Arma Ubud, jadwal pentas pada jam 18:45, dengan harga tiket Rp. 100.000.
+        p Mohon dicatat, harga tiket dapat berubah sewaktu-waktu.
+
+      section
+        h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
+        img(src="images/tari-kecak-di-pura-uluwatu.jpg" height = 300 width = 600)
+
+      Section
+        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
+
+      Section
+        p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil + driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil.
+        p Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
 
    include footer
