--- a/src/menu.jade
+++ b/src/menu.jade
@@ -11,7 +11,7 @@ nav(class="navbar navbar-default", role="navigation")
     div(class="collapse navbar-collapse", id="presentation-chooser")
      ul(class="nav navbar-nav")
       li(class="dropdown")
-       a(class="dropdown-toggle", data-toggle="dropdown", href="#") Pilih Presentasi <b class="caret"></b>
+       a(class="dropdown-toggle", data-toggle="dropdown", href="#") Daftar Wisata <b class="caret"></b>
        ul(class="dropdown-menu")
         li <a href="1. Tampak Siring.html">Tampak Siring</a>
         li <a href="2. Puri Ubud.html">Puri Ubud</a>
