Check HTML - mengedit 5s/d 8

--- a/src/8. Ubud Monkey Forest.jade
+++ b/src/8. Ubud Monkey Forest.jade
@@ -1,59 +1,60 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Sawah Terasering Ubud
+  include header
 
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Ubud Monkey Forest
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Ubud sangat terkenal sampai kemancanegara akan seni, alam dan budaya. Saat anda mendengar salah satu nama objek wisata di Bali, yaitu Ubud monkey forest. Walaupun anda belum pernah berlibur ke objek wisata ini, anda pasti tahu dari namanya, bahwa anda akan dapat melihat kera di salah satu objek wisata Ubud ini
+      section
+        p Ubud sangat terkenal sampai kemancanegara akan seni, alam dan budaya. Saat mendengar salah satu nama objek wisata di Bali, yaitu Ubud monkey forest. Walaupun belum pernah berlibur ke objek wisata ini, pasti tahu dari namanya, bahwa akan dapat melihat kera di salah satu objek wisata Ubud ini
       
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
+      section        
         h2 Lokasi Objek Wisata Ubud Monkey Forest  
-        p Tentunya banyak hal yang dapat anda lakukan di Ubud. Seperti melihat sawah terasering di Tegalalang Ubud, wisata rafting di Ubud, menonton tari kecak Ubud dan liburan ke museum kesenian yang sangat banyak terdapat di Ubud.
+        p Tentunya banyak hal yang dapat dilakukan di Ubud. Seperti melihat sawah terasering di Tegalalang Ubud, wisata rafting di Ubud, menonton tari kecak Ubud dan liburan ke museum kesenian yang sangat banyak terdapat di Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        p Ubud monkey forest salah satu objek wisata di Ubud yang wajib dikunjungi, jika anda sedang berlibur di Bali. Merupakan kawasan hutan lindung dan di dalam hutan ini, terdapat pura sakral umat Hindu Bali. Nama asli objek wisata Ubud monkey forest adalah Mandala Wisata Wenara Wana, tapi lebih dikenal dengan nama Sacred Monkey Forest Sanctuary.
+      section        
+        p Ubud monkey forest salah satu objek wisata di Ubud yang wajib dikunjungi, jika wisatawan sedang berlibur di Bali. Merupakan kawasan hutan lindung dan di dalam hutan ini, terdapat pura sakral umat Hindu Bali. Nama asli objek wisata Ubud monkey forest adalah Mandala Wisata Wenara Wana, tapi lebih dikenal dengan nama Sacred Monkey Forest Sanctuary.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img.big(src="images/ubudMKF.jpg")
+      section
+        img.big(src="images/ubudMKF.jpg" height=300 width=600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Objek wisata monkey forest Ubud Bali, berada di Jalan Monkey Forest, Ubud provinsi Bali dengan kode pos 80571. Jika anda berangkat dari international airport menuju lokasi dari Ubud monkey forest, di perlukan waktu kurang lebih satu jam.
+      section
+        P Objek wisata monkey forest Ubud Bali, berada di Jalan Monkey Forest, Ubud provinsi Bali dengan kode pos 80571. Jika berangkat dari international airport menuju lokasi dari Ubud monkey forest, di perlukan waktu kurang lebih satu jam.
+
         p Klik Disini Untuk Melihat, <a href = "http://goo.gl/maps/829iu">Peta Lokasi Monkey Forest Ubud.</a>
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+
+      section
         h2 Biaya Tiket Masuk Objek Wisata Ubud Monkey Forest 
-        p Jika anda ingin memasuki objek wisata monkey forest Ubud, anda akan dikenakan biaya tiket masuk sebesar Rp 20.000 per orang. Harga tiket masuk Ubud Monkey Forest Rp 20.000 per orang, khusus untuk wisatawan domestik. Untuk parkir mobil akan dikenakan biaya Rp 5.000 per mobil.
+        p Jika ingin memasuki objek wisata monkey forest Ubud, akan dikenakan biaya tiket masuk sebesar Rp 20.000 per orang. Harga tiket masuk Ubud Monkey Forest Rp 20.000 per orang, khusus untuk wisatawan domestik. Untuk parkir mobil akan dikenakan biaya Rp 5.000 per mobil.
+
         p Lihat disini, <a href = "http://www.rentalmobilbali.net/harga-tiket-masuk-wisata-di-bali/">Daftar Harga Tiket Masuk Objek Wisata Di Bali</a>
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img.big(src="images/ubudMKF2.jpg")
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Di saat anda memasuki kawasan objek wisata monkey forest Bali, udara sejuk akan terasa, pepohonan hijau yang tinggi dan hijau, akan tampak dari areal parkir. Sebelum anda memasuki pintuk masuk, disebelah kiri dari pintu masuk, akan terdapat loket tiket, di loket inilah anda akan membayar tiket masuk. Di pintu masuk, anda akan melihat beberapa pedagang pisang yang dapat anda beli, jika ingin memberikan makan kera-kera. Jam buka dari tempat wisata mongkey forest di Ubud, dari jam 08:00 s/d 18:00 waktu Bali.
+      section
+        img.big(src="images/ubudMKF2.jpg" height=300 width=600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
+        p Di saat memasuki kawasan objek wisata monkey forest Bali, udara sejuk akan terasa, pepohonan hijau yang tinggi dan hijau, akan tampak dari areal parkir. Sebelum memasuki pintu masuk, disebelah kiri dari pintu masuk, akan terdapat loket tiket, di loket inilah wisatawan membayar tiket masuk. Di pintu masuk, wisatawan dapat melihat beberapa pedagang pisang yang dapat dibeli, jika ingin memberikan makan kera-kera. Jam buka dari tempat wisata mongkey forest di Ubud, dari jam 08:00 s/d 18:00 waktu Bali.
+
+      section
         p Waktu terbaik untuk berkunjung ke Ubud Monkey Forest adalah pada jam 14:00. Karena hampir sebagian dari kera-kera sudah kenyang, mendapatkan makanan dari pengunjung sebelumnya. Hal ini membuat sifat agresif kera-kera sedikit berkurang. Di dalam objek wisata monkey forest di Ubud, banyak sekali terdapat petugas yang mengawasi kera-kera. Jadi pengunjung merasa nyaman dari kera-kera yang sedikit agresif.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h3.bullet Ada beberapa tips yang sebaiknya anda lakukan jika mengunjungi tempat wisata Ubud Monkey Forest
+      section
+        h3.bullet Ada beberapa tips yang sebaiknya dilakukan jika mengunjungi tempat wisata Ubud Monkey Forest
         ol
-          li Taruhlah barang berharga anda di dalam tas, seperti anting-anting, selendang, kacamata ataupun handphone. Jika anda ingin foto-foto, selalu pegang erat kamera anda. Barang-barang tersebut akan menarik minat dari kera-kera untuk mengambil.
-          li Berjalanlah di jalan yang sudah disediakan, jangan berjalan melewati areal dari jalan yang sudah disediakan. Hal ini akan membuat kera-kera agresif, karena kera-kera mengira anda memasuki kawasan mereka.
+          li Taruhlah barang berharga di dalam tas, seperti anting-anting, selendang, kacamata ataupun handphone. Jika ingin foto-foto, selalu pegang erat kamera. Barang-barang tersebut akan menarik minat dari kera-kera untuk mengambil.
+          li Berjalanlah di jalan yang sudah disediakan, jangan berjalan melewati areal dari jalan yang sudah disediakan. Hal ini akan membuat kera-kera agresif, karena kera-kera mengira wisatawan memasuki kawasan mereka.
           li Jangan memukul atau menyakiti kera-kera, hal ini akan membuat kera-kera yang lain akan menyerang anda.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Objek Wisata Di Bali Favorit Wisatawan
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Selain monkey forest di Ubud, pulau Bali juga memiliki objek wisata lain untuk dapat melihat kera-kera. Tempat wisata tersebut antara lain, <a href = "http://www.rentalmobilbali.net/pura-uluwatu/">Pura Uluwatu</a>, <a href = "http://www.rentalmobilbali.net/alas-kedaton/">Alas Kedaton</a>, Pura Pulaki. Mudah-mudahan informasi yang kami tuliskan di situs ini, berguna bagi anda yang berencana berlibur di Bali dengan mengunjungi monkey forest Bali di Ubud.
+      section
+        p Selain monkey forest di Ubud, pulau Bali juga memiliki objek wisata lain untuk dapat melihat kera-kera. Tempat wisata tersebut antara lain, <a href = "http://www.rentalmobilbali.net/pura-uluwatu/">Pura Uluwatu</a>, <a href = "http://www.rentalmobilbali.net/alas-kedaton/">Alas Kedaton</a>, Pura Pulaki. Mudah-mudahan informasi yang kami tuliskan di situs ini, berguna bagi wisatawan yang berencana berlibur di Bali dengan mengunjungi monkey forest Bali di Ubud.
 
-   script(src='build/build.js')
+   include footer
+
+
