--- a/src/7. Sawah Terasering Ubud.jade
+++ b/src/7. Sawah Terasering Ubud.jade
@@ -1,41 +1,38 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Sawah Terasering Ubud
+  include header
 
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Sawah Terasering Ubud
-        img(src="images/Sawah-Terasering-Ubud.jpg" width = 400)
+        img(src="images/Sawah-Terasering-Ubud.jpg" height = 300 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic') 
+      section 
         h2 Indahnya Pemandangan Hijau Persawahan       
-        p Pulau Bali, banyak memiliki areal persawahan, tapi tidak semua daerah di Bali, memiliki sawah terasering. Untuk melihat sawah terasering di Bali yang memiliki pemandangan bagus, ada di beberapa tempat. Yaitu Jatiluwih Tabanan, Pupuan Tabanan, Antosari (pantai Soka), Busung Biu Buleleng, Tirta Gangga Karangasem dan Tegalalang Ubud.
+        p Pulau Bali, banyak memiliki areal persawahan, tapi tidak semua daerah di Bali, memiliki sawah terasering. Untuk melihat sawah terasering di Bali yang memiliki pemandangan bagus, ada di beberapa tempat, yaitu Jatiluwih Tabanan, Pupuan Tabanan, Antosari (pantai Soka), Busung Biu Buleleng, Tirta Gangga Karangasem dan Tegalalang Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         H2 Objek Favorit Wisatawan
-        p Saat ini, anda pasti bertanya di Ubud sebelah mana, untuk dapat melihat pemadangan sawah terasering? Lokasinya bernama desa Tegalalang. Terletak di sebelah utara Ubud. Tegalalang Ubud sangat terkenal di kalangan para wisatawan dan menjadi objek favorit wisatawan. Karena letaknya sangat berdekatan dengan objek wisata di Bali yang lainnya, seperti Goa Gajah, Tampak Siring dan Kintamani.
+        p Untuk dapat melihat pemadangan sawah terasering, lokasinya bernama desa Tegalalang. Terletak di sebelah utara Ubud. Tegalalang Ubud sangat terkenal di kalangan para wisatawan dan menjadi objek favorit wisatawan. Karena letaknya sangat berdekatan dengan objek wisata di Bali yang lainnya, seperti Goa Gajah, Tampak Siring dan Kintamani.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Di pinggir jalan di desa Tegalalang Ubud, anda akan melihat warung, restoran yang menawarkan pemandangan sawah terasering Ubud. Pemandangan sawah terasering Ubud tidak seluas seperti yang di Jatiluwih. Tapi menawarkan pemandangan tersering yang unik, karena lerengnya sangat miring. Untuk dapat menikmati pemandangan sawah terasering dengan nyaman. Anda hanya perlu membeli makanan atau minuman di salah satu warung yang menghadap ke pemandangan terasering Ubud.
+      section
+        P Di pinggir jalan di desa Tegalalang Ubud, akan terlihat warung, restoran yang menawarkan pemandangan sawah terasering Ubud. Pemandangan sawah terasering Ubud tidak seluas seperti yang di Jatiluwih. Tapi menawarkan pemandangan tersering yang unik, karena lerengnya sangat miring. Untuk dapat menikmati pemandangan sawah terasering dengan nyaman. Wisatawan hanya perlu membeli makanan atau minuman di salah satu warung yang menghadap ke pemandangan terasering Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         H2 Sawah Terasering Ubud - Tempat Wisata Yang Harus Dikunjungi  
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Bagi anda yang pertama kali datang untuk liburan ke Bali, pastilah tidak akan tahu cara mencari lokasi dari sawah terasering Ubud. Agar anda tidak tersesat, ada beberapa cara yang menurut kami terbaik untuk wisatawan yang belum pernah ke Tegalalang. Dengan menggunakan jasa sewa mobil dengan supir di Bali.
+      section
+        P Bagi anda yang pertama kali datang untuk liburan ke Bali, pastilah tidak akan tahu cara mencari lokasi dari sawah terasering Ubud. Agar anda tidak tersesat, ada beberapa cara terbaik untuk wisatawan yang belum pernah ke Tegalalang. Dengan menggunakan jasa sewa mobil dengan supir di Bali.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Jika anda menyukai pemandangan alam yang masih asri, tempat wisata Ubud tidak hanya menawarkan pemadangan sawah. Ubud juga memiliki pemadangan sungai. Sungai Ayung namanya! Sungai Ayung sangat terkenal sebagi tempat untuk aktivitas arung jeram di Ubud. Jika anda ingin tahu lebih tentang rafting Ubud, silakan klik link ini, srafting sungai Ayung Ubud.   
-     
-   script(src='build/build.js')
+      section
+        P Jika wisatawan menyukai pemandangan alam yang masih asri, tempat wisata Ubud tidak hanya menawarkan pemadangan sawah. Ubud juga memiliki pemadangan sungai. Sungai Ayung namanya. Sungai Ayung sangat terkenal sebagi tempat untuk aktivitas arung jeram di Ubud.
+
+   include footer
+
+
 
 
 
