--- a/src/index.jade
+++ b/src/index.jade
@@ -7,54 +7,53 @@ html
     article
 
       section
-        h1 Tampak Siring
-        img.big(src="images/Tampak Siring - 1.jpg" height = 300 width = 600)
+        h1 Ubud Monkey Forest
 
       section
-        h2 Sejarah Tampak Siring
-        img.big(src="images/Tampak Siring - 2.jpg" height = 300 width = 600)
-      section
-        p Tampak Siring, nama sebuah kecamatan di kabupaten Gianyar, luas dari wilayah kecamatan Tampak Siring, sebesar 42,63 kilometer persegi. Jika anda berangkat dari airport Ngurah Rai Denpasar, maka anda perlu waktu satu jam lima belas menit, untuk ke tempat wisata di Ubud ini dengan mobil. Tampak Siring lebih dikenal dikalangan wisatawan sebagai sebuah pura yang bernama Tirta Empul.
-        P Tirta Empul adalah nama sebuah pura yang terletak di kecamatan Tampak Siring. Pura Tirta Empul banyak dikunjungi para wisatawan, baik dari mancanegara maupun wisatawan domestik. Objek wisata Tirta Empul, merupakan salah satu, tempat liburan di Bali yang wajib dikunjungi. Di pura Tirta Empul, terdapat mata air dan juga digunakan oleh masyarakat pemeluk agama Hindu, untuk permandian dan memohon tirta suci.
+        p Ubud sangat terkenal sampai kemancanegara akan seni, alam dan budaya. Saat mendengar salah satu nama objek wisata di Bali, yaitu Ubud monkey forest. Walaupun belum pernah berlibur ke objek wisata ini, pasti tahu dari namanya, bahwa akan dapat melihat kera di salah satu objek wisata Ubud ini
+      
+      section        
+        h2 Lokasi Objek Wisata Ubud Monkey Forest  
+        p Tentunya banyak hal yang dapat dilakukan di Ubud. Seperti melihat sawah terasering di Tegalalang Ubud, wisata rafting di Ubud, menonton tari kecak Ubud dan liburan ke museum kesenian yang sangat banyak terdapat di Ubud.
+
+      section        
+        p Ubud monkey forest salah satu objek wisata di Ubud yang wajib dikunjungi, jika wisatawan sedang berlibur di Bali. Merupakan kawasan hutan lindung dan di dalam hutan ini, terdapat pura sakral umat Hindu Bali. Nama asli objek wisata Ubud monkey forest adalah Mandala Wisata Wenara Wana, tapi lebih dikenal dengan nama Sacred Monkey Forest Sanctuary.
 
       section
-        h2
-          Sejarah Tampak Siring Pura Tirta Empul
-          img.big(src="images/Tampak Siring - 3.jpg" height = 250 width = 600)
-        p
-          Nama Tampak Siring berasal dari kata Tampak yang berarti telapak dan Siring berarti miring. Usana Bali salah satu lontar yang menceritakan tentang sejarah Tampak Siring Bali. Telapak yang ada dalam nama tempat wisata ini, diceritakan sebagai telapak dari raja yang bernama Mayadenawa.
+        img.big(src="images/ubudMKF.jpg" height=300 width=600)
 
       section
-        p
-          Mayadenawa diceritakan seorang raja sakti, tapi memiliki sifat jahat dan beraggapan dirinya adalah seorang dewa. Karena bersifat jahat, maka Dewa Indra mengirim pasukan beliau, untuk menghancurkan Mayadenawa. Mayadenawa kalah perang melawan Dewa Indra dan Mayadenawa lari kehutan. Untuk menghilangkan jejak, Mayadenawa berjalan dengan memiringkan kakinya ke tengah hutan.
-        p
-          Walaupun Mayadenawa berusaha menghilangkan jejak, tapi usahanya melarikan diri gagal. Sebelum berhasil ditangkap oleh pasukan dewa Indra, Mayadenawa menciptakan mata air beracun. Dengan mata air beracun, Mayadenawa berhasil membunuh sebagian dari pasukan dewa Indra, yang mengejar Mayadenawa.
+        P Objek wisata monkey forest Ubud Bali, berada di Jalan Monkey Forest, Ubud provinsi Bali dengan kode pos 80571. Jika berangkat dari international airport menuju lokasi dari Ubud monkey forest, di perlukan waktu kurang lebih satu jam.
+
+        p Klik Disini Untuk Melihat, <a href = "http://goo.gl/maps/829iu">Peta Lokasi Monkey Forest Ubud.</a>
 
       section
-        p Untuk mengatasi mata air beracun dari Mayadenawa, Dewa Indra menciptakan mata air penawar racun. Mata air ini yang bernama Tirta Empul (air suci), oleh karena itu Pura yang memiliki mata air ini disebut dengan nama pura Tirta Empul. Hutan yang digunakan untuk Mayadenawa melarikan diri, dengan posisi kakinya dimiringkan inilah yang sekarang menjadi kawasan wisata Tampak Siring.
+        h2 Biaya Tiket Masuk Objek Wisata Ubud Monkey Forest 
+        p Jika ingin memasuki objek wisata monkey forest Ubud, akan dikenakan biaya tiket masuk sebesar Rp 20.000 per orang. Harga tiket masuk Ubud Monkey Forest Rp 20.000 per orang, khusus untuk wisatawan domestik. Untuk parkir mobil akan dikenakan biaya Rp 5.000 per mobil.
 
-       section
-        h2 Istana Tampak Siring 
-        img.big(src="images/Tampak Siring -4.jpg" height = 300 width = 600)
-        h3 >> Tempat Wisata Di Bali <<
+        p Lihat disini, <a href = "http://www.rentalmobilbali.net/harga-tiket-masuk-wisata-di-bali/">Daftar Harga Tiket Masuk Objek Wisata Di Bali</a>
 
       section
-        p selain pura,di tempat wisata ini terdapat istana kepresidenan yang didirikan oleh presiden pertama indonesia,IR soekarno sebagai tempat peristirahatan beliau saat berkunjung ke Bali. Istana tampak Siring dibangun dari tahun 1957 - 1960.
-        p Pembangunan istana kepresidenan Tampaksiring dilakukan secara perlahan-lahan dan mengalami tahapan. Artiktek yang mendesain istana kepresidenan adalah RM Soedarsono. Bangunan awal yang di bangun pada tahun 1957 adalah wisma Merdeka dan wisma Yudistira.
+        img.big(src="images/ubudMKF2.jpg" height=300 width=600)
 
       section
-       p Istana Tampak Siring mengalami penambahan bangunan pada tahun 2003, yang diperuntukan untuk KTT ASEAN Summit XIV. Penambahan bangunan pada Istana Tampak Siring, berupa bangunan untuk sarana konfrensi dan resepsi tamu negara. Balai Wantilan yang ada di Istana Tampak Siring, juga mengalami renovasi untuk acara pertujukan kesenian tamu negara.
- 
-       p Tujuan dari pembangunan istana kepresidenan ini, sebagai tempat Presiden, keluarga presiden dan tamu negara beristirahat saat berkunjung ke pulau Bali.
+        p Di saat memasuki kawasan objek wisata monkey forest Bali, udara sejuk akan terasa, pepohonan hijau yang tinggi dan hijau, akan tampak dari areal parkir. Sebelum memasuki pintu masuk, disebelah kiri dari pintu masuk, akan terdapat loket tiket, di loket inilah wisatawan membayar tiket masuk. Di pintu masuk, wisatawan dapat melihat beberapa pedagang pisang yang dapat dibeli, jika ingin memberikan makan kera-kera. Jam buka dari tempat wisata mongkey forest di Ubud, dari jam 08:00 s/d 18:00 waktu Bali.
 
       section
-        h2 Cara Terbaik ke Pura Tirta Empul Tampak Siring
-        p Jika anda liburan ke Bali, sebaiknya anda meluangkan waktu untuk datang ke kawasan wisata pura Tirta Empul dan berkunjung ke istana presiden. Banyak pengalaman dan hal baru yang akan anda ketahui, jika anda berwisata ke pura Tirta Empul. Jika anda menyukai objek wisata Tirta Empul, maka anda pasti akan menyukai objek wisata pura Taman Ayun Mengwi.
-        p Tentunya saat ingin wisata ke pura Tirta Empul, anda pastinya akan memerlukan sarana transfortasi. Saat ini di Bali belum ada sarana transfortasi umum, dari tempat wisata Bali selatan menuju ke kawasan wisata pura Tirta Empul.
+        p Waktu terbaik untuk berkunjung ke Ubud Monkey Forest adalah pada jam 14:00. Karena hampir sebagian dari kera-kera sudah kenyang, mendapatkan makanan dari pengunjung sebelumnya. Hal ini membuat sifat agresif kera-kera sedikit berkurang. Di dalam objek wisata monkey forest di Ubud, banyak sekali terdapat petugas yang mengawasi kera-kera. Jadi pengunjung merasa nyaman dari kera-kera yang sedikit agresif.
 
       section
-        p Jika anda menginap di kawasan wisata Ubud, menggunakan taksi salah satu saranan transfortasi yang dapat anda gunakan. Jika anda berencana mengunjungi lebih dari satu tempat wisata di Bali, tidak hanya ke pura Tirta Empul. Maka menggunakan jasa Bali sewa mobil supir salah satu cara terbaik untuk mendapatkan sarana transportasi murah
-        p Selain menyediakan jasa sewa mobil murah di Bali dengan supir, kami juga menyediakan jasa paket wisata di Bali untuk wisata ke pura Tirta Empul. Sebagian besar pelanggan kami yang memilih paket wisata saat liburan di Bali, tidak ingin ribet untuk memikirkan akan, biaya tiket masuk, biaya parkir kendaraan, biaya bahan bakar minyak serta biaya makan. Selain tidak ribet, dengan membeli paket wisata ke Bali, total biaya liburan akan jauh lebih murah dari pada anda tidak membeli paket tour.
+        h3.bullet Ada beberapa tips yang sebaiknya dilakukan jika mengunjungi tempat wisata Ubud Monkey Forest
+        ol
+          li Taruhlah barang berharga di dalam tas, seperti anting-anting, selendang, kacamata ataupun handphone. Jika ingin foto-foto, selalu pegang erat kamera. Barang-barang tersebut akan menarik minat dari kera-kera untuk mengambil.
+          li Berjalanlah di jalan yang sudah disediakan, jangan berjalan melewati areal dari jalan yang sudah disediakan. Hal ini akan membuat kera-kera agresif, karena kera-kera mengira wisatawan memasuki kawasan mereka.
+          li Jangan memukul atau menyakiti kera-kera, hal ini akan membuat kera-kera yang lain akan menyerang anda.
+
+      section
+        h1 Objek Wisata Di Bali Favorit Wisatawan
+
+      section
+        p Selain monkey forest di Ubud, pulau Bali juga memiliki objek wisata lain untuk dapat melihat kera-kera. Tempat wisata tersebut antara lain, <a href = "http://www.rentalmobilbali.net/pura-uluwatu/">Pura Uluwatu</a>, <a href = "http://www.rentalmobilbali.net/alas-kedaton/">Alas Kedaton</a>, Pura Pulaki. Mudah-mudahan informasi yang kami tuliskan di situs ini, berguna bagi wisatawan yang berencana berlibur di Bali dengan mengunjungi monkey forest Bali di Ubud.
 
    include footer
 
